  - #3986, ST_AsText now has second argument to limit decimal digits
           (Marc Ducobu, Darafei Praliaskouski)
  - #4020, Casting from box3d to geometry now returns correctly connected
           PolyhedralSurface (Matthias Bay)
  - #2508, ST_OffsetCurve now works with collections (Darafei Praliaskouski)
  - #4006, ST_GeomFromGeoJSON support for json and jsonb as input
          (Paul Ramsey, Regina Obe)
  - #4037, Invalid input geometry is fixed with MakeValid for GEOS exceptions in
           ST_Intersection, ST_Union, ST_Difference, ST_SymDifference (Darafei
           Praliaskouski)
  - #4038, ST_Subdivide now selects pivot for geometry split that reuses input
           vertices. ST_ClipByBox2D is stubbed with ST_Intersection because of
           robustness issues. (Darafei Praliaskouski)
  - #4025, #4032 Fixed precision issue in ST_ClosestPointOfApproach,
           ST_DistanceCPA, and ST_CPAWithin (Paul Ramsey, Darafei Praliaskouski)


PostGIS 2.4.0
2017/09/30

 * New Features *
  - #3822, Have postgis_full_version() also show and check version of
           PostgreSQL the scripts were built against (Sandro Santilli)
  - #2411, curves support in ST_Reverse (Sandro Santilli)
  - #2951, ST_Centroid for geography (Danny Götte)
  - #3788, Allow postgis_restore.pl to work on directory-style (-Fd) dumps
           (Roger Crew)
  - #3772, Direction agnostic ST_CurveToLine output (Sandro Santilli / KKGeo)
  - #2464, ST_CurveToLine with MaxError tolerance (Sandro Santilli / KKGeo)
  - #3599, Geobuf output support via ST_AsGeobuf (Björn Harrtell)
  - #3661, Mapbox vector tile output support via ST_AsMVT (Björn Harrtell / CartoDB)
  - #3689, Add orientation checking and forcing functions (Dan Baston)
  - #3753, Gist penalty speed improvements for 2D and ND points
           (Darafei Praliaskouski, Andrey Borodin)
  - #3677, ST_FrechetDistance (Shinichi Sugiyama)
  - Most aggregates (raster and geometry),