@@ -34,6 +34,7 @@ ERROR:  Empty geometry
 ST_Angle_2_lines|4.71238898038469
 #3965|25|25
 #3971|t
+#4071|2|3|4
 typmod_point_4326|(Point,4326)
 typmod_point_0|(Point)
 NOTICE:  SRID value -1 converted to the officially unknown SRID value 0
