@@ -270,7 +270,7 @@ ERROR:  invalid GML representation
 #2870|Point[GS]
 #2956|t
 #2985|LINESTRING(20.9511664253809 52.3984560730436)
-#2996|t
+#2996|247.44|247.44
 #3119a|121
 #3119b|291
 #3119c|615
