@@ -50,7 +50,7 @@ PostGIS 2.5.0
            PolyhedralSurface (Matthias Bay)
   - #2508, ST_OffsetCurve now works with collections (Darafei Praliaskouski)
   - #4006, ST_GeomFromGeoJSON support for json and jsonb as input
-          (Paul Ramsey, Regina Obe)
+           (Paul Ramsey, Regina Obe)
   - #4037, Invalid input geometry is fixed with MakeValid for GEOS exceptions in
            ST_Intersection, ST_Union, ST_Difference, ST_SymDifference (Darafei
            Praliaskouski)
@@ -59,6 +59,7 @@ PostGIS 2.5.0
            robustness issues. (Darafei Praliaskouski)
   - #4025, #4032 Fixed precision issue in ST_ClosestPointOfApproach,
            ST_DistanceCPA, and ST_CPAWithin (Paul Ramsey, Darafei Praliaskouski)
+  - #4071, ST_ClusterKMeans crash on NULL/EMPTY fixed (Darafei Praliaskouski)
 
 
 PostGIS 2.4.0
